VYPParser.py
# Generated from VYP.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class VYPParser ( Parser ):

    grammarFileName = "VYP.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'{'", "'}'", "':'", "';'", 
                     "','", "'='", "'!'", "'*'", "'/'", "'+'", "'-'", "'<'", 
                     "'<='", "'>'", "'>='", "'=='", "'!='", "'&&'", "'||'", 
                     "'.'", "'class'", "'else'", "'if'", "'int'", "'new'", 
                     "'return'", "'string'", "'super'", "'this'", "'void'", 
                     "'while'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "CLASS", "ELSE", 
                      "IF", "INT", "NEW", "RETURN", "STRING", "SUPER", "THIS", 
                      "VOID", "WHILE", "INTEGER_LITERAL", "ID", "STRING_LITERAL", 
                      "WHITE_SPACE", "LINE_COMMENT", "BLOCK_COMMENT" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_function_definition = 2
    RULE_function_header = 3
    RULE_function_body = 4
    RULE_class_definition = 5
    RULE_class_header = 6
    RULE_class_body = 7
    RULE_class_members = 8
    RULE_variable_definition = 9
    RULE_multiple_variable_definition = 10
    RULE_variable_assignment = 11
    RULE_if_else_block = 12
    RULE_if_part = 13
    RULE_else_part = 14
    RULE_while_block = 15
    RULE_expression = 16
    RULE_literal_value = 17
    RULE_instance_creation = 18
    RULE_instance_variable = 19
    RULE_instance_function_call = 20
    RULE_nested_object = 21
    RULE_function_call = 22
    RULE_expression_list = 23
    RULE_next_expression = 24
    RULE_variable_type = 25
    RULE_parameter_list = 26
    RULE_next_parameter = 27

    ruleNames =  [ "program", "statement", "function_definition", "function_header", 
                   "function_body", "class_definition", "class_header", 
                   "class_body", "class_members", "variable_definition", 
                   "multiple_variable_definition", "variable_assignment", 
                   "if_else_block", "if_part", "else_part", "while_block", 
                   "expression", "literal_value", "instance_creation", "instance_variable", 
                   "instance_function_call", "nested_object", "function_call", 
                   "expression_list", "next_expression", "variable_type", 
                   "parameter_list", "next_parameter" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    CLASS=23
    ELSE=24
    IF=25
    INT=26
    NEW=27
    RETURN=28
    STRING=29
    SUPER=30
    THIS=31
    VOID=32
    WHILE=33
    INTEGER_LITERAL=34
    ID=35
    STRING_LITERAL=36
    WHITE_SPACE=37
    LINE_COMMENT=38
    BLOCK_COMMENT=39

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(VYPParser.EOF, 0)

        def function_definition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VYPParser.Function_definitionContext)
            else:
                return self.getTypedRuleContext(VYPParser.Function_definitionContext,i)


        def class_definition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VYPParser.Class_definitionContext)
            else:
                return self.getTypedRuleContext(VYPParser.Class_definitionContext,i)


        def getRuleIndex(self):
            return VYPParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = VYPParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << VYPParser.CLASS) | (1 << VYPParser.INT) | (1 << VYPParser.STRING) | (1 << VYPParser.VOID))) != 0):
                self.state = 58
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [VYPParser.INT, VYPParser.STRING, VYPParser.VOID]:
                    self.state = 56
                    self.function_definition()
                    pass
                elif token in [VYPParser.CLASS]:
                    self.state = 57
                    self.class_definition()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 62
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 63
            self.match(VYPParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def if_else_block(self):
            return self.getTypedRuleContext(VYPParser.If_else_blockContext,0)


        def while_block(self):
            return self.getTypedRuleContext(VYPParser.While_blockContext,0)


        def expression(self):
            return self.getTypedRuleContext(VYPParser.ExpressionContext,0)


        def getRuleIndex(self):
            return VYPParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = VYPParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 68
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [VYPParser.IF]:
                self.enterOuterAlt(localctx, 1)
                self.state = 65
                self.if_else_block()
                pass
            elif token in [VYPParser.WHILE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 66
                self.while_block()
                pass
            elif token in [VYPParser.T__0, VYPParser.T__8, VYPParser.NEW, VYPParser.THIS, VYPParser.INTEGER_LITERAL, VYPParser.ID, VYPParser.STRING_LITERAL]:
                self.enterOuterAlt(localctx, 3)
                self.state = 67
                self.expression(0)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_definitionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function_header(self):
            return self.getTypedRuleContext(VYPParser.Function_headerContext,0)


        def function_body(self):
            return self.getTypedRuleContext(VYPParser.Function_bodyContext,0)


        def getRuleIndex(self):
            return VYPParser.RULE_function_definition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_definition" ):
                listener.enterFunction_definition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_definition" ):
                listener.exitFunction_definition(self)




    def function_definition(self):

        localctx = VYPParser.Function_definitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_function_definition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.function_header()
            self.state = 71
            self.function_body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_headerContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable_type(self):
            return self.getTypedRuleContext(VYPParser.Variable_typeContext,0)


        def ID(self):
            return self.getToken(VYPParser.ID, 0)

        def parameter_list(self):
            return self.getTypedRuleContext(VYPParser.Parameter_listContext,0)


        def getRuleIndex(self):
            return VYPParser.RULE_function_header

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_header" ):
                listener.enterFunction_header(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_header" ):
                listener.exitFunction_header(self)




    def function_header(self):

        localctx = VYPParser.Function_headerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_function_header)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.variable_type()
            self.state = 74
            self.match(VYPParser.ID)
            self.state = 75
            self.match(VYPParser.T__0)
            self.state = 76
            self.parameter_list()
            self.state = 77
            self.match(VYPParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_bodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VYPParser.StatementContext)
            else:
                return self.getTypedRuleContext(VYPParser.StatementContext,i)


        def getRuleIndex(self):
            return VYPParser.RULE_function_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_body" ):
                listener.enterFunction_body(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_body" ):
                listener.exitFunction_body(self)




    def function_body(self):

        localctx = VYPParser.Function_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_function_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(VYPParser.T__2)
            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << VYPParser.T__0) | (1 << VYPParser.T__8) | (1 << VYPParser.IF) | (1 << VYPParser.NEW) | (1 << VYPParser.THIS) | (1 << VYPParser.WHILE) | (1 << VYPParser.INTEGER_LITERAL) | (1 << VYPParser.ID) | (1 << VYPParser.STRING_LITERAL))) != 0):
                self.state = 80
                self.statement()
                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 86
            self.match(VYPParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_definitionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def class_header(self):
            return self.getTypedRuleContext(VYPParser.Class_headerContext,0)


        def class_body(self):
            return self.getTypedRuleContext(VYPParser.Class_bodyContext,0)


        def getRuleIndex(self):
            return VYPParser.RULE_class_definition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClass_definition" ):
                listener.enterClass_definition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClass_definition" ):
                listener.exitClass_definition(self)




    def class_definition(self):

        localctx = VYPParser.Class_definitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_class_definition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.class_header()
            self.state = 89
            self.class_body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_headerContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(VYPParser.CLASS, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(VYPParser.ID)
            else:
                return self.getToken(VYPParser.ID, i)

        def getRuleIndex(self):
            return VYPParser.RULE_class_header

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClass_header" ):
                listener.enterClass_header(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClass_header" ):
                listener.exitClass_header(self)




    def class_header(self):

        localctx = VYPParser.Class_headerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_class_header)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(VYPParser.CLASS)
            self.state = 92
            self.match(VYPParser.ID)
            self.state = 93
            self.match(VYPParser.T__4)
            self.state = 94
            self.match(VYPParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_bodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def class_members(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VYPParser.Class_membersContext)
            else:
                return self.getTypedRuleContext(VYPParser.Class_membersContext,i)


        def getRuleIndex(self):
            return VYPParser.RULE_class_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClass_body" ):
                listener.enterClass_body(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClass_body" ):
                listener.exitClass_body(self)




    def class_body(self):

        localctx = VYPParser.Class_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_class_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(VYPParser.T__2)
            self.state = 100
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << VYPParser.INT) | (1 << VYPParser.STRING) | (1 << VYPParser.VOID))) != 0):
                self.state = 97
                self.class_members()
                self.state = 102
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 103
            self.match(VYPParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_membersContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable_definition(self):
            return self.getTypedRuleContext(VYPParser.Variable_definitionContext,0)


        def function_definition(self):
            return self.getTypedRuleContext(VYPParser.Function_definitionContext,0)


        def getRuleIndex(self):
            return VYPParser.RULE_class_members

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClass_members" ):
                listener.enterClass_members(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClass_members" ):
                listener.exitClass_members(self)




    def class_members(self):

        localctx = VYPParser.Class_membersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_class_members)
        try:
            self.state = 107
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                self.variable_definition()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 106
                self.function_definition()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Variable_definitionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable_type(self):
            return self.getTypedRuleContext(VYPParser.Variable_typeContext,0)


        def ID(self):
            return self.getToken(VYPParser.ID, 0)

        def multiple_variable_definition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VYPParser.Multiple_variable_definitionContext)
            else:
                return self.getTypedRuleContext(VYPParser.Multiple_variable_definitionContext,i)


        def getRuleIndex(self):
            return VYPParser.RULE_variable_definition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariable_definition" ):
                listener.enterVariable_definition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariable_definition" ):
                listener.exitVariable_definition(self)




    def variable_definition(self):

        localctx = VYPParser.Variable_definitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_variable_definition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.variable_type()
            self.state = 110
            self.match(VYPParser.ID)
            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==VYPParser.T__6:
                self.state = 111
                self.multiple_variable_definition()
                self.state = 116
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 117
            self.match(VYPParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Multiple_variable_definitionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(VYPParser.ID, 0)

        def getRuleIndex(self):
            return VYPParser.RULE_multiple_variable_definition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMultiple_variable_definition" ):
                listener.enterMultiple_variable_definition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMultiple_variable_definition" ):
                listener.exitMultiple_variable_definition(self)




    def multiple_variable_definition(self):

        localctx = VYPParser.Multiple_variable_definitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_multiple_variable_definition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(VYPParser.T__6)
            self.state = 120
            self.match(VYPParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Variable_assignmentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(VYPParser.ID, 0)

        def expression(self):
            return self.getTypedRuleContext(VYPParser.ExpressionContext,0)


        def getRuleIndex(self):
            return VYPParser.RULE_variable_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariable_assignment" ):
                listener.enterVariable_assignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariable_assignment" ):
                listener.exitVariable_assignment(self)




    def variable_assignment(self):

        localctx = VYPParser.Variable_assignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_variable_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(VYPParser.ID)
            self.state = 123
            self.match(VYPParser.T__7)
            self.state = 124
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_else_blockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def if_part(self):
            return self.getTypedRuleContext(VYPParser.If_partContext,0)


        def else_part(self):
            return self.getTypedRuleContext(VYPParser.Else_partContext,0)


        def getRuleIndex(self):
            return VYPParser.RULE_if_else_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_else_block" ):
                listener.enterIf_else_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_else_block" ):
                listener.exitIf_else_block(self)




    def if_else_block(self):

        localctx = VYPParser.If_else_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_if_else_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.if_part()
            self.state = 127
            self.else_part()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_partContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(VYPParser.IF, 0)

        def expression(self):
            return self.getTypedRuleContext(VYPParser.ExpressionContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VYPParser.StatementContext)
            else:
                return self.getTypedRuleContext(VYPParser.StatementContext,i)


        def getRuleIndex(self):
            return VYPParser.RULE_if_part

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_part" ):
                listener.enterIf_part(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_part" ):
                listener.exitIf_part(self)




    def if_part(self):

        localctx = VYPParser.If_partContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_if_part)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(VYPParser.IF)
            self.state = 130
            self.match(VYPParser.T__0)
            self.state = 131
            self.expression(0)
            self.state = 132
            self.match(VYPParser.T__1)
            self.state = 133
            self.match(VYPParser.T__2)
            self.state = 137
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << VYPParser.T__0) | (1 << VYPParser.T__8) | (1 << VYPParser.IF) | (1 << VYPParser.NEW) | (1 << VYPParser.THIS) | (1 << VYPParser.WHILE) | (1 << VYPParser.INTEGER_LITERAL) | (1 << VYPParser.ID) | (1 << VYPParser.STRING_LITERAL))) != 0):
                self.state = 134
                self.statement()
                self.state = 139
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 140
            self.match(VYPParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Else_partContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSE(self):
            return self.getToken(VYPParser.ELSE, 0)

        def expression(self):
            return self.getTypedRuleContext(VYPParser.ExpressionContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VYPParser.StatementContext)
            else:
                return self.getTypedRuleContext(VYPParser.StatementContext,i)


        def getRuleIndex(self):
            return VYPParser.RULE_else_part

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElse_part" ):
                listener.enterElse_part(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElse_part" ):
                listener.exitElse_part(self)




    def else_part(self):

        localctx = VYPParser.Else_partContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_else_part)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.match(VYPParser.ELSE)
            self.state = 143
            self.match(VYPParser.T__0)
            self.state = 144
            self.expression(0)
            self.state = 145
            self.match(VYPParser.T__1)
            self.state = 146
            self.match(VYPParser.T__2)
            self.state = 150
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << VYPParser.T__0) | (1 << VYPParser.T__8) | (1 << VYPParser.IF) | (1 << VYPParser.NEW) | (1 << VYPParser.THIS) | (1 << VYPParser.WHILE) | (1 << VYPParser.INTEGER_LITERAL) | (1 << VYPParser.ID) | (1 << VYPParser.STRING_LITERAL))) != 0):
                self.state = 147
                self.statement()
                self.state = 152
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 153
            self.match(VYPParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class While_blockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(VYPParser.WHILE, 0)

        def expression(self):
            return self.getTypedRuleContext(VYPParser.ExpressionContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VYPParser.StatementContext)
            else:
                return self.getTypedRuleContext(VYPParser.StatementContext,i)


        def getRuleIndex(self):
            return VYPParser.RULE_while_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile_block" ):
                listener.enterWhile_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile_block" ):
                listener.exitWhile_block(self)




    def while_block(self):
